implemented profile editing
