# static/swagger.json
@@ -65,6 +65,9 @@
           },
           "401": {
             "description": "Unauthorised"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -105,6 +108,9 @@
           },
           "401": {
             "description": "Unauthorised"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -180,6 +186,9 @@
           },
           "401": {
             "description": "Unauthorised"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -240,6 +249,82 @@
           },
           "401": {
             "description": "Unauthorised"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/profile": {
+      "put": {
+        "tags": [
+          "User Requests"
+        ],
+        "summary": "Update account information",
+        "requestBody": {
+          "description": "",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "description": "",
+                "type": "object",
+                "required": [
+                  "email",
+                  "name",
+                  "last_name",
+                  "address",
+                  "city",
+                  "country",
+                  "phone_number"
+                ],
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "format": "email"
+                  },
+                  "name": {
+                    "type": "string",
+                    "format": "string"
+                  },
+                  "last_name": {
+                    "type": "string",
+                    "format": "string"
+                  },
+                  "address": {
+                    "type": "string",
+                    "format": "string"
+                  },
+                  "city": {
+                    "type": "string",
+                    "format": "string"
+                  },
+                  "country": {
+                    "type": "string",
+                    "format": "string"
+                  },
+                  "phone_number": {
+                    "type": "string",
+                    "format": "phone"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorised"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
